# task-memory-hub

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml  task-memory-hub-설계명세.md
docs/: agentic-hands-on-tutorial-mode.md  agentic-workspace-control-plane.md  ci-necessity-review.md  cline-mcp-onprem-pilot-checklist.md  deepagents-backend-pilot.md  external-adapter-plan.md  functionality-drift-audit.md  harness-profile-and-ai-action-intake.md  harness-runner-governance-development-spec.md  implementation-sanity-check.md  manual.html  newbie-hands-on-curriculum.md  postgres-slow-track.md  public-progress.md  public-release-plan.md  review-gate-flow.md  script-ref-backend-allowlist.md  task-execution-contract-standard.md  task-title-standard.md  verification-manual.md  web-ui-design-application.md  web-ui-screen-guide.md  windows-install-standard.md
installers/: TaskMemoryHub-Install.cmd  TaskMemoryHubStation-Install.cmd  TaskMemoryHubStation-Uninstall.cmd
scripts/: build-docs-manual.py  ci-smoke.ps1  install-tmh-hub-station.ps1  install-tmh.ps1  setup-postgres.ps1  start-tmh-hub-station.ps1  status-tmh-hub-station.ps1  stop-tmh-hub-station.ps1  test-cline-mcp-pilot.ps1  tmh-deepagents-live-smoke.py  tmh-deepagents-smoke.py  tmh-mcp.cmd  tmh-script-backend-smoke.py  uninstall-tmh-hub-station.ps1
task_memory_hub/: __init__.py  action_intake.py  api.py  backup.py  branding.py  cli.py  config.py  file_bridge.py  governance.py  mcp_server.py  notification_adapters.py  orchestrator.py  registry.py  runner.py  service.py  store.py  sync.py  timeutil.py  (+2 more)
(+4 files in other folders)
